# debug-tools

./: .gitignore  CMakeLists.txt  README.md  build-tools.sh
.github/workflows/: push.yml
debug_config/: CMakeLists.txt  compiler-deinit.ps1  compiler-deinit.sh  compiler-init.ps1  compiler-init.sh  config-deinit.ps1  config-deinit.sh  config-init.ps1  config-init.sh
debug_config/Linux/: README_Linux.txt
debug_config/Linux/compiler-shared/: README_Linux.txt
debug_config/Linux/config/: default.yaml
debug_config/Linux/editor-shared/: README_Linux.txt
debug_config/Linux/vscode/clang/: extension.sh  launch.json  tasks.json
debug_config/Linux/vscode/gcc/: tasks.json
debug_config/Windows/compiler-shared/: README_Windows.txt
debug_config/Windows/config/: default.yaml
debug_config/Windows/shared/: README-Windows.txt
debug_config/Windows/vscode/: deinit-vscode.cmd  init-vscode.cmd  init-vscode.sh
debug_config/Windows/vscode/gcc/: launch.json  tasks.json
debug_config/Windows/vscode/msvc/: launch.json  tasks.json
debug_config/compiler-shared/: README.txt
debug_config/compiler-shared/vscode/: settings.json
debug_config/config/: .schema.yaml  schema.yaml
debug_config/editor-shared/: README.txt
debug_config/editor-shared/cmake/: CMakeLists.txt
debug_config/editor-shared/vscode/: deinit-vscode.ps1  deinit-vscode.sh  init-vscode.ps1  init-vscode.sh
debug_config/msvc/: tasks.json
debug_config/shared/: README.txt
debug_config/shared/vscode/: deinit-vscode.cmd  deinit-vscode.sh  init-vscode.cmd  init-vscode.sh
debug_scripts/: clean.cmd  deinit.cmd  deinit.sh  init.cmd  init.ps1  init.sh  test.cmd  test.sh  testall.cmd  testall.sh  testone.cmd  testone.sh  testrnd.cmd  testrnd.sh  update.cmd
debug_scripts/batch/: addfile.cmd  clean.cmd  deinit.cmd  init.cmd  test.cmd  testall.cmd  testone.cmd  testrnd.cmd  update.cmd
debug_scripts/powershell/: addfile.ps1  clean.ps1  deinit.ps1  init.ps1  rename.ps1  test.ps1  testall.ps1  testone.ps1  testrnd.ps1  update.ps1
debug_scripts/shell/: addfile.sh  clean.sh  compile.sh  deinit.sh  init.sh  rename.sh  test.sh  testall.sh  testone.sh  testrnd.sh  update.sh
debug_tools/: checked.h  dector.h  generator.h  judge.h  limit.h  log.h  program.h  tester.h  timer.h
include/: cmdarg.h  color.h  convert.h  define.h  define.h.in  dynArray.h  exception.h  init-list.h  init.h  io.h  logfile.h  memory.h  output.h  pathFormat.h  process_common.h  regexseq.h  replace.h  system_common.h  table.h  testcase.h  testtools.h  utility.h
include/Linux/: process.h  system.h
include/Windows/: system.h
src/: CMakeLists.txt  autodiff.cpp  grouptest.cpp  init.cpp  output.cpp  randomtest.cpp  singletest.cpp  testcase.cpp  utility.cpp
src/debug-lib/: cmdarg.cpp  memory.cpp  output.cpp  regexseq.cpp  testcase.cpp  utility.cpp
src/exceptions/: Pass.cpp  RunTime.cpp  TimeLimit.cpp  Unknon.cpp  Unknown.cpp  Warn.cpp
src/init/: CMakeLists.txt  init-util.cpp  vscode.cpp
src/init-lib/: CMakeLists.txt  cmake.cpp  init-util.cpp  none.cpp  vscode.cpp
src/judge-lib/: CMakeLists.txt  judge.def  judge.version  main.cpp
src/process-lib/: Linux.cpp  Windows.cpp  common.cpp
src/system-lib/: CMakeLists.txt  Linux.cpp  Windows.cpp  common.cpp  roundToPage.cpp  threadId.cpp  timeUsage.cpp
src/system-lib/Linux/: command.cpp  memoryLimit.cpp  pipe.cpp  process.cpp  protectPage.cpp  shm.cpp  timeLimit.cpp  usage.cpp
src/system-lib/Windows/: Windows.cpp  command.cpp  init.cpp  limit.cpp  pipe.cpp  process.cpp  protectPage.cpp  shm.cpp  usage.cpp
src/testcase-lib/: common.cpp  logfile.cpp  regexseq.cpp  summary.cpp  testcase.cpp  traditional.cpp
src/testtools-lib/: autodiff.cpp  tmpfile.cpp
