set(permission PERMISSIONS OWNER_READ OWNER_EXECUTE)
set(sh_perm PATTERN *.sh ${permission})
set(ps1_perm PATTERN *.ps1 ${permission})
set(cmd_perm PATTERN *.cmd ${permission})
set(scripts_perm ${sh_perm} ${ps1_perm} ${cmd_perm})
set(sys ${CMAKE_CURRENT_SOURCE_DIR}/${CMAKE_HOST_SYSTEM_NAME})

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/compiler-shared DESTINATION config/ ${scripts_perm})
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/editor-shared DESTINATION config/ ${scripts_perm})
install(DIRECTORY ${sys}/ DESTINATION config/ PATTERN "*compiler-shared" EXCLUDE PATTERN "*editor-shared" EXCLUDE ${scripts_perm})
install(DIRECTORY ${sys}/compiler-shared/ DESTINATION config/compiler-shared/ ${scripts_perm})
install(DIRECTORY ${sys}/editor-shared/ DESTINATION config/editor-shared/ ${scripts_perm})
file(GLOB scripts LIST_DIRECTORIES false ${CMAKE_CURRENT_SOURCE_DIR}/*)
message(${sys})
message(${scripts})
install(FILES ${scripts} DESTINATION config/ ${permission})